# zketch-v12

./: CMakeLists.txt  Composite.drawio  README.md  app.manifest  goals.md  version.rc
.cache/clangd/index/: builtin.hpp.3673AAC8E62F3B7B.idx  button copy.hpp.A1CE4EF55762F2AD.idx  button.hpp.01D5C1C0B1905045.idx  button.hpp.E3280A55BD089D8F.idx  canvas copy.hpp.810E20924D6CFA88.idx  canvas.hpp.4428562F141DF834.idx  canvas.hpp.F703D92F1257C2BA.idx  canvas_final.hpp.4C7A19B8D8231022.idx  enumerates.hpp.789342ABD3DF1962.idx  enumerates.hpp.DC1A6068EB282A4D.idx  env.hpp.4478756EADE6373B.idx  env.hpp.7E853AD70B7FC197.idx  event.h.BDDB73392ED0433D.idx  event.hpp.D1BF1EE8CA324741.idx  event.hpp.F6ADC39E6C33F31F.idx  event_.h.81F6545E111A2AF9.idx  font.h.B9EF91010B4AD133.idx  font.hpp.CF25BC5A8015C042.idx  font.hpp.D08086DD00B2C322.idx  fontdump.hpp.388B474D5250CC83.idx  fontfield.hpp.C987E651DBF39EE0.idx  gdiplusinit.h.42EFD970732B8028.idx  gdiplusinit.hpp.DC347613D8CC64FE.idx  gdiplusinit.hpp.DC4A88783136F019.idx  inputmanager.h.4B90790C606CE024.idx  inputsystem.hpp.47346F3BA392B04C.idx  inputsystem.hpp.7D5DDC6CB4605A5A.idx  keycode.h.4252C8CAC890B931.idx  layer.hpp.1B06F0EB16ADB33E.idx  logger.h.FCA71899DC1B54E7.idx  logger.hpp.4E10BB8D0932823C.idx  logger.hpp.56402F481B687C28.idx  main.cpp.D1A0CB8D0E98C621.idx  renderer copy.hpp.1ACB0EFC24443B1D.idx  renderer final.hpp.FE683D8511118AF1.idx  renderer.hpp.2EF11C11C8B88D97.idx  renderer.hpp.4D9E7845C9DBE4B5.idx  slider copy.hpp.A207B1BE3CF84E75.idx  slider.hpp.37429BB5E777172E.idx  slider.hpp.6B4E6CC6A41F8C7A.idx  (+33 more)
include/: bitmap_pool.hpp  builtin.hpp  button copy.hpp  button.hpp  canvas copy.hpp  canvas.hpp  canvas_final.hpp  enumerates.hpp  env.hpp  event.h  event.hpp  event_.h  font.h  font.hpp  fontdump.hpp  fontfield.hpp  gdiplusinit.h  gdiplusinit.hpp  handler.h  inputmanager.h  inputsystem.h  inputsystem.hpp  keycode.h  layer.hpp  logger.h  logger.hpp  renderer copy.hpp  renderer final.hpp  renderer.hpp  renderer_test.hpp  slider copy.hpp  slider.hpp  textbox copy.hpp  textbox.hpp  textinput.hpp  texture.h  timer.h  unit.h  unit.hpp  widget final.hpp  (+11 more)
src/: main.cpp  test1.cpp  test10.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp  test6.cpp  test7.cpp  test8.cpp  test9.cpp
zketch-v12/: CMakeLists.txt  goals.md
zketch-v12/include/: button copy.hpp  canvas copy.hpp  canvas.hpp  env.hpp  renderer.hpp  slider copy.hpp  textbox copy.hpp  widget copy.hpp  window copy.hpp  window.hpp
zketch-v12/src/: test3.cpp  test4.cpp
